# memlattice

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SPEC.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: PUBLISH.md  SCREENCAST.md  design.md  index.html
docs/superpowers/specs/: 2026-06-03-trust-gate-design.md
lattice/: __main__.py  adapters.py  agentic.py  budget.py  cli.py  config.py  embeddings.py  inbox.py  outcomes.py  refresh.py  schedule.py  templates.py  usage.py  vault.py  verify.py
lattice/mcp/: server.py  tools.py
tests/: test_budget.py  test_budget_periods.py  test_citations.py  test_cli_integration.py  test_doctor.py  test_embeddings_fallback.py  test_inbox.py  test_link_idempotent.py  test_lint_directives.py  test_lint_false_positives.py  test_mcp.py  test_outcomes.py  test_refresh.py  test_schedule.py  test_types.py  test_usage.py  test_verify.py  test_verify_ci.py  test_verify_entail.py
