[project]
name = "lattice-memory"
version = "0.0.1"
description = "Your AI agent's long-term memory, in plain markdown. Verified by construction."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Midhun R Nair" }]
dependencies = [
  "click>=8.1",
  "pyyaml>=6.0",
  "rank-bm25>=0.2.2",
]

[project.scripts]
lattice = "lattice.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["lattice*"]
