[project]
name = "memlattice"
version = "0.1.0"
description = "Your AI agent's long-term memory, in plain markdown. Verified by construction."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Midhun R Nair" }]
keywords = ["ai", "agent", "memory", "claude", "cursor", "rag", "markdown", "obsidian"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Documentation",
  "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
  "click>=8.1",
  "pyyaml>=6.0",
  "rank-bm25>=0.2.2",
  "tomli>=2.0; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/midhun1998/memlattice"
Issues = "https://github.com/midhun1998/memlattice/issues"
Documentation = "https://github.com/midhun1998/memlattice#readme"

[project.optional-dependencies]
agentic = ["anthropic>=0.40"]
# Optional local-embedding ranker for `lattice context` (see lattice/embeddings.py).
# Heavy: sentence-transformers transitively pulls torch + numpy (hundreds of MB),
# so it is STRICTLY an extra — never a core dependency. Core runs fine without it
# (silent BM25 fallback). Install with `pip install "memlattice[embeddings]"`.
embeddings = ["sentence-transformers>=2.2"]
# Optional MCP server so agents (Claude Code, Cursor, ...) query lattice
# natively instead of being told to run the CLI. The SDK is an extra — core
# imports fine without it; only `lattice-mcp` needs it. Install with
# `pip install "memlattice[mcp]"` then `lattice install claude-code`.
mcp = ["mcp>=1.2"]

[project.scripts]
lattice = "lattice.cli:main"
lattice-mcp = "lattice.mcp.server:main"

# The built-in `git` adapter registers via the SAME mechanism third parties
# use: the "lattice.adapters" entry-point group. Core does not depend on this
# being installed — `available_adapters()` always includes the built-in `git`
# adapter directly — but registering it here documents and exercises the
# discovery contract. Third-party adapters ship as separate packages.
[project.entry-points."lattice.adapters"]
git = "lattice.adapters:GitAdapter"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["lattice*"]
